# tech-blog-pelican

./: .envrc  .gitignore  README.md  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  updateBlogs.sh
