[tool.poetry]
name = "blogs"
version = "0.1.0"
description = "my tech blog on github"
authors = ["Li Chao <leetschau@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.0"
markdown = "^3.1"
beautifulsoup4 = "^4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
